[gd_scene format=3 uid="uid://dlh1yd45rh5g0"]

[ext_resource type="Script" uid="uid://dkpg1726hwq45" path="res://Scripts/EnemyRanged.gd" id="1_uxmp5"]
[ext_resource type="Texture2D" uid="uid://dmrnmor4iunkq" path="res://Textures/OrangeYellowGhostanim.png" id="2_uxmp5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g2x43"]
height = 1.9143677
radius = 0.8017578

[sub_resource type="AtlasTexture" id="AtlasTexture_emokg"]
atlas = ExtResource("2_uxmp5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pecad"]
atlas = ExtResource("2_uxmp5")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dqyn"]
atlas = ExtResource("2_uxmp5")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6y5e"]
atlas = ExtResource("2_uxmp5")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_2hcwk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_emokg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pecad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dqyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6y5e")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="EnemyRanged" type="CharacterBody3D" unique_id=1126585756]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_uxmp5")
type = 3
speed = 10.0
metadata/_custom_type_script = "uid://chf41ybnn0pjv"

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=424920587]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0013427734, 0.5610657, 0.004211426)
shape = SubResource("CylinderShape3D_g2x43")

[node name="Sprite3D" type="AnimatedSprite3D" parent="." unique_id=641626010]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.43398494, 0)
modulate = Color(1, 1, 0.62352943, 1)
pixel_size = 0.02
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_2hcwk")
animation = &"run"

[node name="Timer" type="Timer" parent="." unique_id=235797103]
wait_time = 10.0
one_shot = true
autostart = true

[node name="attack_cooldown" type="Timer" parent="." unique_id=984244654]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
